--- a/blog/templates/header.html
+++ b/blog/templates/header.html
@@ -26,7 +26,7 @@
             {% if user.is_authenticated %}
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_superuser %}
-                <li><a href="admin/">Backoffice</a> </li>
+                <li><a href="{% url 'backoffice' %}">Backoffice</a> </li>
                 {% endif %}
                 <li><a href="#">Mon compte</a> </li>
                 <li><a href="{% url 'auth_logout' %}">Déconnexion</a></li>
