--- a/quad/templates/dashboard.html
+++ b/quad/templates/dashboard.html
@@ -10,24 +10,55 @@
     </div>
     <div class="row">
         <div class="col-md-6">
-            <h3>Article publiés</h3>
-            <ul>
+            <h2>Article publiés</h2>
+            <ul class="list-unstyled">
                 {% for article in articles_on %}
                 <li>
-                    <a href="#">{{article.title}}</a>
-                    <a href="update/article/{{article.slug}}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
-                    <a href="delete/article/{{article.slug}}"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <a href="/article/{{article.slug}}">
+                                <img class="img-responsive" src="/media/{{article.image}}" alt="image article" />
+                            </a>
+                        </div>
+                        <div class="col-md-3">
+                            <h3>{{article.title}}</h3>
+                            <p>
+                                {{article.body}}
+                            </p>
+                        </div>
+                        <div class="col-md-4">
+                            <a href="update/article/{{article.slug}}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+                            <a href="delete/article/{{article.slug}}"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
+
+                        </div>
+                    </div>
                 </li>
                 {% endfor %}
             </ul>
         </div>
         <div class="col-md-6">
-            <h3>Article non publié</h3>
-            <ul>
+            <h2>Article non publié</h2>
+            <ul class="list-unstyled">
                 {% for article in articles_off %}
                 <li>
-                    <a href="#">{{article.title}}</a>
-                    <a href="update/article/{{article.slug}}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <a href="article/{{article.slug}}">
+                                <img class="img-responsive" src="/media/{{article.image}}" alt="image article" />
+                            </a>
+                        </div>
+                        <div class="col-md-3">
+                            <h3>{{article.title}}</h3>
+                            <p>
+                                {{article.body}}
+                            </p>
+                        </div>
+                        <div class="col-md-4">
+                            <a href="update/article/{{article.slug}}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+                            <a href="delete/article/{{article.slug}}"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
+
+                        </div>
+                    </div>
                 </li>
                 {% endfor %}
             </ul>
