--- a/blog/templates/registration/registration_form.html
+++ b/blog/templates/registration/registration_form.html
@@ -7,21 +7,7 @@
             <div class="form-signin-heading">
                 <form role="form" action="{{ request.path }}" method="post">
                   {% csrf_token %}
-                  <div class="form-group">
-                      <h1>Inscription</h1>
-                  </div>
-                    <div class="form-group">
-                      <p>{{form.username.label}}</p>
-                      {{form.username}}
-                    </div>
-                    <div class="form-group">
-                      <p>{{form.password1.label}}</p>
-                      {{form.password1}}
-                    </div>
-                    <div class="form-group">
-                      <p>{{form.password2.label}}</p>
-                      {{form.password2}}
-                    </div>
+                  {{form}}
                     <button type="submit" class="btn btn-primary btn-block">Valider</button>
                     <br>
                     <p class="text-center"><a href="{% url 'auth_login' %}">Déjà inscrit ?</a></p>
