--- a/quad/templates/detail_article.html
+++ b/quad/templates/detail_article.html
@@ -1,28 +1,37 @@
-{% extends "base.html" %}
-{% load staticfiles %}
-{% block content %}
+{% extends "base.html" %} {% load staticfiles %} {% block content %}
 
 <div class="container">
-    <h1 class="text-center">{{article.title}}</h1>
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-8">
             <img class="img-responsive" src="/media/{{article.image}}" alt="image article" />
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
             <p>
-                {{article.body}}
+                <h1 class="text-center">{{article.title}}</h1> {{article.body}}
             </p>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6">
-            <h2>Commentaires</h2>
-            <ul class="list-unstyled">
-                {% for comment in comments %}
-                <li>{{comment}}</li>
-                {% endfor %}
-            </ul>
-            <a href="{% url 'create_comment' article.id %}">Commenter</a>
+        <div class="col-md-offset-2 col-md-8">
+            <div class="zone-comment">
+                <h2 class="text-center">Derniers commentaires</h2>
+                <ul class="list-unstyled">
+                    {% for comment in comments %}
+                    <li class="comment">
+                        <div class="row">
+                            <div class="col-md-11">
+                                {{comment}}
+                            </div>
+                            <div class="col-md-1">
+                                <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </li>
+                    {% endfor %}
+                </ul>
+                <a href="{% url 'create_comment' article.id %}">Commenter</a>
+            </div>
+
         </div>
     </div>
 
