--- a/quad/templates/profile.html
+++ b/quad/templates/profile.html
@@ -10,8 +10,8 @@
                     <ul class="list-unstyled">
                         <li>Email : {{user.email}}</li>
                         <li>Pseudo : {{user.username}}</li>
-                        <li>Nom : {{user.first_name}}</li>
-                        <li>Prénom : {{user.last_name}}</li>
+                        <li>Prénom : {{user.first_name}}</li>
+                        <li>Nom : {{user.last_name}}</li>
                     </ul>
                 </div>
                 <div class="col-md-6">
