--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -9,6 +9,8 @@
         <title>{% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="{% static 'bower_components/bootstrap/dist/css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'bower_components/font-awesome/css/font-awesome.min.css' %}">
+        <link rel="stylesheet" href="{% static 'bower_components/slick-carousel/slick/slick.css' %}"/>
+        <link rel="stylesheet" href="{% static 'bower_components/slick-carousel/slick/slick-theme.css' %}"/>
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
     </head>
     <body>
@@ -20,4 +22,7 @@
         {% include "footer.html" %}
     <script type="text/javascript" src="{% static 'bower_components/jquery/dist/jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'bower_components/slick-carousel/slick/slick.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
+
 </html>
