--- a/quad/templates/homepage.html
+++ b/quad/templates/homepage.html
@@ -6,36 +6,113 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8">
-            {% for article in articles %}
-            <div class="article-home">
+            <div class="row">
+                <div class="col-md-offset-1 col-md-10">
+                            <div class="row">
+                                {% for article in articles %}
+                                <div class="col-md-6 article-home">
+                                        <a class="wrapper" href="article/{{article.slug}}">
+                                            <div class="text">
+                                                <h2>{{ article.title }}</h2>
+                                                <p>
+                                                    Créé le {{article.creation_date}}
+                                                </p>
+                                            </div>
+                                            <img class="img-responsive" src="/media/{{article.image}}" alt="image blog" />
+                                        </a>
+                                </div>
+                                {% endfor %}
+                            </div>
 
-                <h3>{{ article.title }}</h3>
-                <p>
-                    Créé le {{article.creation_date}}
-                </p>
-                <a href="article/{{article.slug}}"><img class="img-responsive" src="/media/{{article.image}}" alt="image blog" /></a>
-
+                </div>
             </div>
-            {% endfor %}
         </div>
         <div class="col-md-4 nav-vertical">
-            <h2>Derniers articles :</h2>
-            <div class="one-time">
+            <div class="row">
+                <div class="col-md-offset-1 col-md-10">
+                    <h3>Derniers articles :</h3>
+                    <div class="one-time">
 
-                {% for article in articles %}
-                <img class="img-responssive" src="/media/{{article.image}}" alt="">
-                {% endfor %}
+                        {% for article in articles %}
+                        <img class="img-responssive" src="/media/{{article.image}}" alt="">
+                        {% endfor %}
+                    </div>
+                    <h3>Articles les plus populaire :</h3>
+                    <div class="one-time">
+
+                        {% for article in popular_article %}
+                        <img class="img-responssive" src="/media/{{article.image}}" alt="">
+                        {% endfor %}
+                    </div>
+                    <h3>Partenaires :</h3>
+                    <div class="row">
+                        <div class="col-md-6 partenaire">
+                            <a href="http://www.quad-passion.fr/" target="_blank">
+                                <img class="img-responsive" src="/static/img/part1.jpg">
+                            </a>
+                        </div>
+                        <div class="col-md-6 partenaire">
+                            <a href="http://www.quad-passion.fr/" target="_blank">
+                                <img class="img-responsive" src="/static/img/part2.jpg">
+                            </a>
+                        </div>
+                        <div class="col-md-6 partenaire">
+                            <a href="http://www.quad-passion.fr/" target="_blank">
+                                <img class="img-responsive" src="/static/img/part3.jpg">
+                            </a>
+                        </div>
+                        <div class="col-md-6 partenaire">
+                            <a href="http://www.quad-passion.fr/" target="_blank">
+                                <img class="img-responsive" src="/static/img/part4.jpg">
+                            </a>
+                        </div>
+                        <div class="col-md-6 partenaire">
+                            <a href="http://www.quad-passion.fr/" target="_blank">
+                                <img class="img-responsive" src="/static/img/part5.jpg">
+                            </a>
+                        </div>
+                        <div class="col-md-6 partenaire">
+                            <a href="http://www.quad-passion.fr/" target="_blank">
+                                <img class="img-responsive" src="/static/img/part6.jpg">
+                            </a>
+                        </div>
+
+                    </div>
+                    <h3>Constructeur :</h3>
+                    <div class="col-md-6 partenaire">
+                        <a href="http://www.quad-passion.fr/" target="_blank">
+                            <img class="img-responsive" src="/static/img/cons1.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 partenaire">
+                        <a href="http://www.quad-passion.fr/" target="_blank">
+                            <img class="img-responsive" src="/static/img/cons2.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 partenaire">
+                        <a href="http://www.quad-passion.fr/" target="_blank">
+                            <img class="img-responsive" src="/static/img/cons3.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 partenaire">
+                        <a href="http://www.quad-passion.fr/" target="_blank">
+                            <img class="img-responsive" src="/static/img/cons4.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 partenaire">
+                        <a href="http://www.quad-passion.fr/" target="_blank">
+                            <img class="img-responsive" src="/static/img/cons5.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 partenaire">
+                        <a href="http://www.quad-passion.fr/" target="_blank">
+                            <img class="img-responsive" src="/static/img/cons6.jpg">
+                        </a>
+                    </div>
+                </div>
             </div>
-            <h2>Articles les plus populaire :</h2>
-            <div class="one-time">
-
-                {% for article in popular_article %}
-                <img class="img-responssive" src="/media/{{article.image}}" alt="">
-                {% endfor %}
-            </div>
-            <h2>Partenaires :</h2>
-
         </div>
+
     </div>
 </div>
 
