--- a/static/css/sass/style.scss
+++ b/static/css/sass/style.scss
@@ -11,14 +11,43 @@
     background-color: #F7F7F7;
 }
 
-// .article-home {
-//     margin: 1%;
-//     width: 31%;
-//     display: inline-block;
-// }
+.article-home {
+    margin-top: 2em;
+}
+
+.wrapper {
+    position: relative;
+    padding: 0;
+    width:100%;
+    display:block;
+}
+.text {
+    position: absolute;
+    top: 0;
+    color:#444444;
+    background-color:rgba(255,255,255,0.8);
+    width: 100%;
+    height: 100%;
+    // line-height:100px;
+    text-align: center;
+    z-index: 10;
+    opacity: 0;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+.text:hover {
+    opacity:1;
+}
+
+img {
+    z-index:1;
+}
+
 
 .nav-vertical{
-    border: 1px solid black;
+    background-color: #E9E9E9;
 }
 
 .zone-comment{
@@ -55,4 +84,8 @@
         background-color: #F7F7F7;
         border: #EDEDED 1px solid;
     }
+}
+
+.partenaire{
+    margin: 1em 0;
 }
