--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="{% static 'bower_components/font-awesome/css/font-awesome.min.css' %}">
         <link rel="stylesheet" href="{% static 'bower_components/slick-carousel/slick/slick.css' %}"/>
         <link rel="stylesheet" href="{% static 'bower_components/slick-carousel/slick/slick-theme.css' %}"/>
+        <link rel="stylesheet" href="{% static 'bower_components/slicknav/dist/slicknav.min.css' %}"/>
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
     </head>
     <body>
@@ -23,5 +24,6 @@
     <script type="text/javascript" src="{% static 'bower_components/jquery/dist/jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'bower_components/slick-carousel/slick/slick.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'bower_components/slicknav/dist/jquery.slicknav.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
 </html>
