--- a/blog/templates/header.html
+++ b/blog/templates/header.html
@@ -1,44 +1,26 @@
-<nav class="navbar navbar-inverse header">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">Blog</a>
-        </div>
-
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
+<nav class="container-fluide">
+    <div class="container">
+        <div id="menu" class="row">
+            <div class="col-lg-3 col-md-3 col-sm-4">
+                <a class="logo" href="/">Quad essaie</a>
+            </div>
+            <div class="menu col-lg-offset-3 col-lg-6 col-md-offset-3 col-md-6 col-sm-offset-0 col-sm-8">
                 {% if user.is_authenticated %}
-                <li><a href="#">Lien 1</a></li>
-                <li><a href="#">Lien 2</a></li>
-                <li><a href="#">Lien 3</a></li>
+                <ul>
+                    <li><a href="{% url 'compte' user.pk %}">Bonjour {{user}}</a></li>
+                    {% if user.is_superuser %}
+                    <li><a href="{% url 'backoffice' %}">Backoffice</a> </li>
+                    {% endif %}
+                    <li><a href="{% url 'compte' user.pk %}">Mon compte</a></li>
+                    <li><a href="{% url 'auth_logout' %}">Déconnexion</a></li>
+                </ul>
                 {% else %}
-                <li><a href="{% url 'auth_login' %}">Lien 1</a></li>
-                <li><a href="{% url 'auth_login' %}">Lien 2</a></li>
-                <li><a href="{% url 'auth_login' %}">Lien 3</a></li>
+                <ul>
+                    <li><a href="{% url 'auth_login' %}">Se Connecter</a></li>
+                    <li><a href="{% url 'registration_register' %}">Inscription</a></li>
+                </ul>
                 {% endif %}
-            </ul>
-
-            {% if user.is_authenticated %}
-            <ul class="nav navbar-nav navbar-right">
-                {% if user.is_superuser %}
-                <li><a href="{% url 'backoffice' %}">Backoffice</a> </li>
-                {% endif %}
-                <li>Bonjour {{ user }}</li>
-                <li><a href="{% url 'compte' user.pk %}">Mon compte</a> </li>
-                <li><a href="{% url 'auth_logout' %}">Déconnexion</a></li>
-            </ul>
-            {% else %}
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="{% url 'auth_login' %}">Se Connecter</a></li>
-                <li><a href="{% url 'registration_register' %}">Inscription</a></li>
-            </ul>
-            {% endif %}
-
+            </div>
         </div>
     </div>
 </nav>
