--- a/static/css/sass/style.scss
+++ b/static/css/sass/style.scss
@@ -1,10 +1,74 @@
-.navbar{
-    margin-bottom: 0;
+// .navbar{
+//     margin-bottom: 0;
+// }
+//
+.slicknav_menu{
+	display:none;
 }
 
-.navbar-inverse, footer{
-    background-color: #EDEDED;
-    border-color: #EDEDED;
+@media screen and (max-width: 900px) {
+	#menu {
+		display:none;
+	}
+
+	.slicknav_menu {
+		display:block;
+        background-color: rgba(10,10,10,0.8);
+	}
+
+    .container-fluide{
+            padding: 0;
+    }
+
+}
+
+body{
+    background-color: #DFE3E5;
+    background-image: url("/static/img/fond-site.png");
+    background-size: cover;
+}
+ .main{
+     margin-top: 60px;
+ }
+
+nav{
+    background-color: rgba(10,10,10,0.8);
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+    padding:0.5em 0;
+    .logo{
+        color: #DFE3E5;
+        text-transform: uppercase;
+        font-size: 2em;
+    }
+    .logo:hover{
+        text-decoration: none;
+        color: #757575;
+    }
+    .container{
+        background-color: rgba(10,10,10,0);
+    }
+    .menu{
+        ul{
+            margin: 0;
+            li{
+                display: inline-block;
+                padding: 0.5em 0.5em;
+                a{
+                    color: #DFE3E5;
+                }
+                a:hover{
+                    text-decoration: none;
+                    color: #757575;
+                }
+            }
+        }
+    }
+}
+
+.img-head{
+    width: 100%;
 }
 
 .container{
@@ -24,10 +88,10 @@
 .text {
     position: absolute;
     top: 0;
-    color:#444444;
-    background-color:rgba(255,255,255,0.8);
+    color:white;
+    background-color:rgba(20,20,20,0.8);
     width: 100%;
-    height: 100%;
+    height: 70px;
     // line-height:100px;
     text-align: center;
     z-index: 10;
@@ -36,18 +100,20 @@
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
+    h2{
+        margin-top: 0em;
+    }
 }
-.text:hover {
+.wrapper:hover .text {
     opacity:1;
 }
 
-img {
-    z-index:1;
-}
-
-
-.nav-vertical{
-    background-color: #E9E9E9;
+.one-time {
+    a{
+        img{
+            height: 221px;
+        }
+    }
 }
 
 .zone-comment{
