--- a/blog/templates/footer.html
+++ b/blog/templates/footer.html
@@ -1,9 +1,40 @@
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12 text-center">
-                Copyright © 2016
-            </div>
+<footer class="container-fluide">
+    <div class="row text-center">
+        <div class="col-lg-4">
+            <h3>Partenaires</h3>
+            <ul class="list-unstyled ul-foot">
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 1</a></li>
+            </ul>
         </div>
+        <div class="col-lg-4">
+            <h3>Constructeurs</h3>
+            <ul class="list-unstyled ul-foot">
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 1</a></li>
+            </ul>
+        </div>
+        <div class="col-lg-4">
+            <h3>Circuits</h3>
+            <ul class="list-unstyled ul-foot">
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 1</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="foot text-center">
+        <p>
+            © 2005-2011 JOHN DOE ALL RIGHTS RESERVED
+        </p>
+
     </div>
 </footer>
