--- a/quad/templates/homepage.html
+++ b/quad/templates/homepage.html
@@ -1,28 +1,25 @@
 {% extends "base.html" %} {% load staticfiles %} {% block content %}
 
-<!-- <div class="container-fluide">
-    <img class="img-responsive img-head" src="/static/img/img-home3.png" alt="quad" />
-</div> -->
-<div class="container">
+<div class="container container-home">
     <div class="row main">
         <div class="col-md-8">
             <div class="row">
                 <div class="col-md-offset-1 col-md-10">
-                            <div class="row">
-                                {% for article in articles %}
-                                <div class="col-md-6 article-home">
-                                        <a class="wrapper" href="article/{{article.slug}}">
-                                            <div class="text">
-                                                <h2>{{ article.title }}</h2>
-                                                <p>
-                                                    Créé le {{article.creation_date}}
-                                                </p>
-                                            </div>
-                                            <img class="img-responsive" src="/media/{{article.image}}" alt="image blog" />
-                                        </a>
+                    <div class="row">
+                        {% for article in articles %}
+                        <div class="col-md-6 article-home">
+                            <a class="wrapper" href="article/{{article.slug}}">
+                                <div class="text">
+                                    <h2>{{ article.title }}</h2>
+                                    <p>
+                                        Créé le {{article.creation_date}}
+                                    </p>
                                 </div>
-                                {% endfor %}
-                            </div>
+                                <img class="img-responsive" src="/media/{{article.image}}" alt="image blog" />
+                            </a>
+                        </div>
+                        {% endfor %}
+                    </div>
 
                 </div>
             </div>
@@ -30,7 +27,7 @@
         <div class="col-md-4 nav-vertical">
             <div class="row">
                 <div class="col-md-offset-1 col-md-10">
-                    <h3>Derniers articles :</h3>
+                    <!-- <h3>Derniers articles :</h3>
                     <div class="one-time">
 
                         {% for article in articles %}
@@ -38,7 +35,7 @@
                             <img class="img-responssive" src="/media/{{article.image}}" alt="article">
                         </a>
                         {% endfor %}
-                    </div>
+                    </div> -->
                     <h3>Articles les plus populaire :</h3>
                     <div class="one-time">
 
