--- a/quad/templates/homepage.html
+++ b/quad/templates/homepage.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% load staticfiles %} {% block content %}
 
-<div class="container container-home">
+<div class="container first-container">
     <div class="row main">
         <div class="col-md-8">
             <div class="row">
@@ -12,7 +12,7 @@
                                 <div class="text">
                                     <h2>{{ article.title }}</h2>
                                     <p>
-                                        Créé le {{article.creation_date}}
+                                        Créé le {{article.creation_date}}  commentaires({{article.comment_count}})
                                     </p>
                                 </div>
                                 <img class="img-responsive" src="/media/{{article.image}}" alt="image blog" />
@@ -20,7 +20,6 @@
                         </div>
                         {% endfor %}
                     </div>
-
                 </div>
             </div>
         </div>
