--- a/static/css/sass/style.scss
+++ b/static/css/sass/style.scss
@@ -26,6 +26,7 @@ body{
     background-color: #DFE3E5;
     background-image: url("/static/img/fond-site.png");
     background-size: cover;
+    background-repeat: no-repeat;
 }
  .main{
      margin-top: 60px;
@@ -71,7 +72,7 @@ nav{
     width: 100%;
 }
 
-.container-home{
+.first-container{
     background-color: #F7F7F7;
 }
 
@@ -108,7 +109,7 @@ nav{
     opacity:1;
 }
 
-.one-time {
+.one-time, .three-time {
     a{
         img{
             height: 221px;
@@ -151,6 +152,8 @@ nav{
     margin: 1em 0;
 }
 
+
+
 footer{
     background-color: rgba(10,10,10,0.8);
     h3{
@@ -173,4 +176,17 @@ footer{
             color: #DFE3E5;
         }
     }
+}
+
+.title-detail{
+    margin: 2em 0 1em 0;
+}
+.info{
+    margin-top: 5em;
+}
+
+.last-articles{
+    border: 1px solid grey;
+    margin: 2em 0;
+    padding: 3em 0;
 }
