--- a/quad/templates/create_article.html
+++ b/quad/templates/create_article.html
@@ -3,21 +3,24 @@
 {% block content %}
 
 <div class="container">
-    <form role="form" name="form" action="{{request.path}}" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {% for field in form %}
-        <p>
-            {{ field.label_tag }}
-            {{field}}
-            {{ field.errors }}
-        </p>
-        {% endfor %}
-        <div class="center">
-            <button type="submit" class="btn btn-primary"> Valider</button>
-            <button type="button" class="btn btn-inverse"> Annuler</button>
-        </div>
-    </form>
+    <div class="main">
 
+        <form role="form" name="form" action="{{request.path}}" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {% for field in form %}
+            <p>
+                {{ field.label_tag }}
+                {{field}}
+                {{ field.errors }}
+            </p>
+            {% endfor %}
+            <div class="center">
+                <button type="submit" class="btn btn-primary"> Valider</button>
+                <button type="button" class="btn btn-inverse"> Annuler</button>
+            </div>
+        </form>
+
+    </div>
 </div>
 
 {% endblock %}
