--- a/static/css/sass/style.scss
+++ b/static/css/sass/style.scss
@@ -85,6 +85,10 @@ nav{
     padding: 0;
     width:100%;
     display:block;
+	img{
+		height: 221px;
+		width: 321px;
+	}
 }
 .text {
     position: absolute;
@@ -109,7 +113,7 @@ nav{
     opacity:1;
 }
 
-.one-time, .three-time {
+.one-time {
     a{
         img{
             height: 221px;
@@ -186,7 +190,16 @@ footer{
 }
 
 .last-articles{
-    border: 1px solid grey;
+    // border: 1px solid grey;
     margin: 2em 0;
-    padding: 3em 0;
+    padding: 3em 2em;
+	background-color: #FBFBFB;
+	border-radius: 5px;
+	img{
+		border: 5px solid grey;
+		height: 260px;
+		width: 343px;
+		border-radius: 5px;
+
+	}
 }
