list comment in profil.html in progress

--- a/quad/templates/detail_article.html
+++ b/quad/templates/detail_article.html
@@ -50,6 +50,9 @@
                                 {{comment}}
                             </p>
                             <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
+                            <p>
+                                ok{{nb_like}}
+                            </p>
                         </li>
                         {% endfor %}
                     </ul>
