--- a/quad/templates/profile.html
+++ b/quad/templates/profile.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Création de compte{% endblock %}
 {% block content %}
+{% load avatar_tags %}
 <div class="container registration first-container">
     <div class="main">
 
@@ -9,16 +10,24 @@
                 <h1>mon Compte</h1>
                 <div class="row">
                     <div class="col-md-6">
-                        <ul class="list-unstyled">
-                            <li>Email : {{user.email}}</li>
-                            <li>Pseudo : {{user.username}}</li>
-                            <li>Prénom : {{user.first_name}}</li>
-                            <li>Nom : {{user.last_name}}</li>
-                        </ul>
+                        <div class="row">
+                            <div class="col-md-6">
+                                {% avatar user 100 class="img-circle img-responsive" id="user_avatar" %}
+                            </div>
+                            <div class="col-md-6">
+                                <ul class="list-unstyled">
+                                    <li>Email : {{user.email}}</li>
+                                    <li>Pseudo : {{user.username}}</li>
+                                    <li>Prénom : {{user.first_name}}</li>
+                                    <li>Nom : {{user.last_name}}</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-6">
                         <ul class="list-unstyled">
                             <li><a href="{%url 'user_update' user.id %}">Modifier mes informations</a></li>
+                            <li><a href="{% url 'avatar_change' %}">Changer son avatar</a></li>
                             <li><a href="{%url 'auth_password_change' %}">Changer mot de passe</a></li>
                         </ul>
                     </div>
