--- a/quad/templates/update_user.html
+++ b/quad/templates/update_user.html
@@ -3,21 +3,25 @@
 {% block content %}
 
 <div class="container">
-    <form role="form" name="form" action="{{request.path}}" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{form.email.label_tag}}
-        {{form.email}}
-        {{form.username.label_tag}}
-        {{form.username}}
-        {{form.last_name.label_tag}}
-        {{form.last_name}}
-        {{form.first_name.label_tag}}
-        {{form.first_name}}
+    <div class="main">
+        <form role="form" name="form" action="{{request.path}}" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{form.avatar.label_tag}}
+            {{form.avatar}}
+            {{form.email.label_tag}}
+            {{form.email}}
+            {{form.username.label_tag}}
+            {{form.username}}
+            {{form.last_name.label_tag}}
+            {{form.last_name}}
+            {{form.first_name.label_tag}}
+            {{form.first_name}}
 
-       {{form.errors}}
+            {{form.errors}}
 
-        <button type="submit" class="btn btn-primary"> Modifier</button>
-    </form>
+            <button type="submit" class="btn btn-primary"> Modifier</button>
+        </form>
+    </div>
 </div>
 
 {% endblock %}
