delete model Profil

--- a/blog/templates/registration/logout.html
+++ b/blog/templates/registration/logout.html
@@ -1,12 +1,15 @@
 {% extends "base.html" %}
 {% block title %}Déconnexion{% endblock %}
 {% block content %}
-<div class="container logout">
-    <div class="row">
-        <div class="col-sm-12 text-center">
-            <div class="text-center">
-                <h4>Vous êtes déconnecté</h4>
-                <p id="redirection"></p>
+<div class="container first-container logout">
+    <div class="main">
+
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                <div class="text-center">
+                    <h4>Vous êtes déconnecté</h4>
+                    <p id="redirection"></p>
+                </div>
             </div>
         </div>
     </div>
