--- a/quad/templates/detail_article.html
+++ b/quad/templates/detail_article.html
@@ -44,7 +44,7 @@
                 <div class="zone-comment">
                     <h2 class="text-center">Les plus populaires</h2>
                     <ul class="list-unstyled">
-                        {% for comment in last_comments %}
+                        {% for comment in pop_comments %}
                         <li class="comment">
                             <p>
                                 {{comment}}
