--- a/quad/templates/profile.html
+++ b/quad/templates/profile.html
@@ -12,7 +12,8 @@
                     <div class="col-md-6">
                         <div class="row">
                             <div class="col-md-6">
-                                {% avatar user 100 class="img-circle img-responsive" id="user_avatar" %}
+                                {% avatar user %}
+
                             </div>
                             <div class="col-md-6">
                                 <ul class="list-unstyled">
