--- a/blog/templates/registration/registration_form.html
+++ b/blog/templates/registration/registration_form.html
@@ -1,17 +1,20 @@
 {% extends "base.html" %}
 {% block title %}Création de compte{% endblock %}
 {% block content %}
-<div class="container registration">
-    <div class="row">
-        <div class="col-sm-4 col-sm-offset-4">
-            <div class="form-signin-heading">
-                <form role="form" action="{{ request.path }}" method="post">
-                  {% csrf_token %}
-                  {{form}}
-                    <button type="submit" class="btn btn-primary btn-block">Valider</button>
-                    <br>
-                    <p class="text-center"><a href="{% url 'auth_login' %}">Déjà inscrit ?</a></p>
-                </form>
+<div class="container first-container registration">
+    <div class="main">
+
+        <div class="row">
+            <div class="col-sm-4 col-sm-offset-4">
+                <div class="form-signin-heading">
+                    <form role="form" action="{{ request.path }}" method="post">
+                        {% csrf_token %}
+                        {{form}}
+                        <button type="submit" class="btn btn-primary btn-block">Valider</button>
+                        <br>
+                        <p class="text-center"><a href="{% url 'auth_login' %}">Déjà inscrit ?</a></p>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
