--- a/blog/templates/footer.html
+++ b/blog/templates/footer.html
@@ -1,6 +1,6 @@
 <footer class="container-fluide">
-    <div class="row text-center">
-        <div class="col-lg-4">
+    <div class="text-center">
+        <div class="col-md-4">
             <h3>Partenaires</h3>
             <ul class="list-unstyled ul-foot">
                 <li><a href="#">Link 1</a></li>
@@ -10,7 +10,7 @@
                 <li><a href="#">Link 1</a></li>
             </ul>
         </div>
-        <div class="col-lg-4">
+        <div class="col-md-4">
             <h3>Constructeurs</h3>
             <ul class="list-unstyled ul-foot">
                 <li><a href="#">Link 1</a></li>
@@ -20,7 +20,7 @@
                 <li><a href="#">Link 1</a></li>
             </ul>
         </div>
-        <div class="col-lg-4">
+        <div class="col-md-4">
             <h3>Circuits</h3>
             <ul class="list-unstyled ul-foot">
                 <li><a href="#">Link 1</a></li>
@@ -35,6 +35,5 @@
         <p>
             © 2005-2011 JOHN DOE ALL RIGHTS RESERVED
         </p>
-
     </div>
 </footer>
