--- a/quad/templates/create_article.html
+++ b/quad/templates/create_article.html
@@ -1,10 +1,10 @@
-{% extends "base.html" %}
+{% extends "base2.html" %}
 {% load staticfiles %}
 {% block content %}
 
-<div class="container">
+<div class="container first-container">
     <div class="main">
-
+        <h1>Création d'article</h1>
         <form role="form" name="form" action="{{request.path}}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {% for field in form %}
@@ -19,7 +19,6 @@
                 <button type="button" class="btn btn-inverse"> Annuler</button>
             </div>
         </form>
-
     </div>
 </div>
 
