--- a/quad/templates/dashboard.html
+++ b/quad/templates/dashboard.html
@@ -1,21 +1,21 @@
-{% extends "base.html" %}
+{% extends "base2.html" %}
 {% load staticfiles %}
 {% block content %}
 
-<div class="container">
+<div class="container first-container">
     <div class="main">
 
         <div class="row">
             <div class="col-md-4">
-                <a href="{% url 'create_article' %}">Créer un article</a>
+                <a href="{% url 'create_article' %}">+ Nouvel Article</a>
             </div>
         </div>
         <div class="row">
             <div class="col-md-6">
-                <h2>Article publiés</h2>
+                <h2 class="text-center">Article publiés</h2>
                 <ul class="list-unstyled">
                     {% for article in articles_on %}
-                    <li>
+                    <li class="espace-article">
                         <div class="row">
                             <div class="col-md-4">
                                 <a href="/article/{{article.slug}}">
@@ -26,9 +26,12 @@
                                 <h3>{{article.title}}</h3>
                             </div>
                             <div class="col-md-4">
-                                <a href="update/article/{{article.slug}}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
-                                <a href="delete/article/{{article.slug}}"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
-
+                                <a class="lien-block" href="update/article/{{article.slug}}">
+                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i> Modification
+                                </a>
+                                <a class="lien-block" href="delete/article/{{article.slug}}">
+                                    <i class="fa fa-trash-o" aria-hidden="true"></i> Supression
+                                </a>
                             </div>
                         </div>
                     </li>
@@ -36,10 +39,10 @@
                 </ul>
             </div>
             <div class="col-md-6">
-                <h2>Article non publié</h2>
+                <h2 class="text-center">Article non publié</h2>
                 <ul class="list-unstyled">
                     {% for article in articles_off %}
-                    <li>
+                    <li class="espace-article">
                         <div class="row">
                             <div class="col-md-4">
                                 <a href="article/{{article.slug}}">
@@ -48,9 +51,6 @@
                             </div>
                             <div class="col-md-3">
                                 <h3>{{article.title}}</h3>
-                                <p>
-                                    {{article.body}}
-                                </p>
                             </div>
                             <div class="col-md-4">
                                 <a href="update/article/{{article.slug}}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
