--- a/static/css/sass/style.scss
+++ b/static/css/sass/style.scss
@@ -1,7 +1,4 @@
-// .navbar{
-//     margin-bottom: 0;
-// }
-//
+
 .slicknav_menu{
 	display:none;
 }
@@ -74,6 +71,7 @@ nav{
 
 .first-container{
     background-color: #F7F7F7;
+	height: 100%;
 }
 
 .article-home {
@@ -160,6 +158,7 @@ nav{
 
 footer{
     background-color: rgba(10,10,10,0.8);
+	// width: 100%;
     h3{
         color:#DFE3E5;
     }
@@ -202,4 +201,52 @@ footer{
 		border-radius: 5px;
 
 	}
+}
+
+
+
+.user-detail{
+	h1{
+		font-size: 3em;
+		margin: 1em 0;
+	}
+	.info-compte{
+		background-color: #FBFBFB;
+		margin: 6em 2em;
+		padding: 2em 0;
+		border-radius: 5px;
+		img{
+			border: 2px solid grey;
+			border-radius: 5px;
+		}
+	}
+	h2{
+		font-size:2em;
+	}
+	.info-comments{
+		background-color: #FBFBFB;
+		margin: 6em 2em;
+		padding: 2em 0;
+		border-radius: 5px;
+	}
+}
+
+
+
+.espace-article{
+	margin: 3em;
+	.lien-block{
+		display: block;
+	}
+}
+
+.h1-update-user{
+	margin: 3em 0;
+}
+
+.form-update-user{
+	background-color: #FBFBFB;
+	margin: 2em 20em;
+	border-radius: 5px;
+	padding: 3em 0;
 }
