--- a/quad/templates/detail_article.html
+++ b/quad/templates/detail_article.html
@@ -32,7 +32,6 @@
                             <p>
                                 {{comment}}
                             </p>
-                            <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
                         </li>
                         {% endfor %}
                     </ul>
@@ -49,9 +48,8 @@
                             <p>
                                 {{comment}}
                             </p>
-                            <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
                             <p>
-                                ok{{nb_like}}
+                                {{nb_like}}
                             </p>
                         </li>
                         {% endfor %}
