--- a/quad/templates/homepage.html
+++ b/quad/templates/homepage.html
@@ -15,7 +15,7 @@
                                         Créé le {{article.creation_date}}  commentaires({{article.comment_count}})
                                     </p>
                                 </div>
-                                <img class="img-responsive" src="/media/{{article.image}}" alt="image blog" />
+                                <img class="img-responsive" src="/media/{{article.image}}" alt="image article" />
                             </a>
                         </div>
                         {% endfor %}
