--- a/quad/templates/profile.html
+++ b/quad/templates/profile.html
@@ -48,6 +48,7 @@
                         {%for comment in mycommentslike%}
                         <p class="text-center">
                             {{comment}}
+                            {{comment.like_set}}
                         </p>
                         <p class="text-center">
 
