style css inscription

--- a/static/css/sass/style.scss
+++ b/static/css/sass/style.scss
@@ -293,3 +293,16 @@ footer{
 		margin-bottom: 2em;
 	}
 }
+
+.main-inscription{
+	h1{
+		margin: 2em 0;
+	}
+	p{
+		margin: 2em 0;
+	}
+	button{
+		margin-bottom: 2em;
+	}
+
+}
