--- a/quad/templates/dashboard.html
+++ b/quad/templates/dashboard.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container first-container">
-    <div class="main">
+    <div class="main main-dashboard">
 
         <div class="row">
             <div class="col-md-4">
