--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -2,28 +2,30 @@
 {% block title %}Connexion{% endblock %}
 {% block content %}
 
-<div class="container login">
-    <div class="row">
-        <div class="col-sm-offset-4 col-sm-4">
-            <form role="form" action="{{ request.path }}" method="post">
-                {% csrf_token %}
-                <div class="form-group">
-                    <h1>Connexion</h1>
-                </div>
-                <div class="form-group">
-                    <p>{{form.username.label}}</p>
-                    <p>{{form.username}}</p>
-                </div>
-                <div class="form-group">
-                    <p>{{form.password.label}}</p>
-                    <p>{{form.password}}</p>
-                </div>
-                <button type="submit" class="btn btn-primary btn-block">Valider</button>
-                <input type="hidden" name="next" value="/" />
-                <br>
-                <p class="text-center"><a href="{% url 'registration_register' %}">Créer un compte</a></p>
-            </form>
+<div class="container first-container login">
+    <div class="main text-center">
+        <div class="row">
+            <div class="col-sm-offset-4 col-sm-4">
+                <form role="form" action="{{ request.path }}" method="post">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <h1>Connexion</h1>
+                    </div>
+                    <div class="form-group">
+                        <p>{{form.username.label}}</p>
+                        <p>{{form.username}}</p>
+                    </div>
+                    <div class="form-group">
+                        <p>{{form.password.label}}</p>
+                        <p>{{form.password}}</p>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Valider</button>
+                    <input type="hidden" name="next" value="/" />
+                    <br>
+                    <p class="text-center"><a href="{% url 'registration_register' %}">Créer un compte</a></p>
+                </form>
 
+            </div>
         </div>
     </div>
 </div>
