--- a/static/css/sass/style.scss
+++ b/static/css/sass/style.scss
@@ -158,8 +158,6 @@ nav{
     margin: 1em 0;
 }
 
-
-
 footer{
     background-color: rgba(10,10,10,0.8);
 	// width: 100%;
@@ -185,29 +183,39 @@ footer{
     }
 }
 
-.title-detail{
-    margin: 2em 0 1em 0;
-}
-.info{
-    margin-top: 5em;
-}
+.main-detail-article{
+	h1{
+		margin: 3em 0 1em 0;
+	}
 
-.last-articles{
-    // border: 1px solid grey;
-    margin: 2em 0;
-    padding: 3em 2em;
-	background-color: #FBFBFB;
-	border-radius: 5px;
 	img{
-		border: 5px solid grey;
-		height: 260px;
-		width: 343px;
+		border: 4px solid grey;
 		border-radius: 5px;
 
 	}
+	.text-article{
+		padding: 3em 2em;
+		background-color: #FBFBFB;
+		border-radius: 5px;
+	}
+
+	.info{
+	    margin-top: 5em;
+	}
+
+	.last-articles{
+	    // border: 1px solid grey;
+	    margin: 2em 0;
+	    padding: 3em 2em;
+		background-color: #FBFBFB;
+		border-radius: 5px;
+		img{
+			height: 260px;
+			width: 343px;
+
+		}
+	}
 }
-
-
 
 .user-detail{
 	h1{
@@ -220,7 +228,7 @@ footer{
 		padding: 2em 0;
 		border-radius: 5px;
 		img{
-			border: 2px solid grey;
+			border: 4px solid grey;
 			border-radius: 5px;
 		}
 	}
@@ -234,13 +242,18 @@ footer{
 		border-radius: 5px;
 	}
 }
+.main-dashboard{
 
+	img{
+		border: 4px solid grey;
+		border-radius: 5px;
 
-
-.espace-article{
-	margin: 3em;
-	.lien-block{
-		display: block;
+	}
+	.espace-article{
+		margin: 3em;
+		.lien-block{
+			display: block;
+		}
 	}
 }
 
@@ -264,7 +277,7 @@ footer{
 		margin: 2em 0;
 	}
 	img{
-		border: 2px solid grey;
+		border: 4px solid grey;
 		border-radius: 5px;
 	}
 
