delete object Like

--- a/quad/templates/profile.html
+++ b/quad/templates/profile.html
@@ -38,7 +38,7 @@
                         <h2 class="text-center">Mes commentaires</h2>
                         {%for comment in mycomments%}
                         <p class="text-center">
-                            {{comment}}
+                            {{comment}} article : {{comment.article}}
                         </p>
 
                         {%endfor%}
