--- a/quad/templates/create_comment.html
+++ b/quad/templates/create_comment.html
@@ -6,25 +6,11 @@
             <div class="zone-comment">
                 <h2>Tout les commentaires</h2>
                 <ul class="list-unstyled">
-                    {% for comment,form in object_list.items %}
+                    {% for comment in comments %}
                     <li class="comment">
                         <div class="row">
                             <div class="col-md-11">
                                 {{comment.body}}
-                            </div>
-                            <div class="col-md-1">
-
-                                <form method="post" action="{% url 'my_form_view_url' %}">
-                                    {% csrf_token %}
-                                    {{form.author}}
-                                    {{form.comment}}
-                                    {{form.is_like}}
-                                    <button type="submit" class="btn btn-primary"> J'aime</button>
-                                    <!-- <i class="fa fa-thumbs-o-up" aria-hidden="true"></i> -->
-
-                                </form>
-
-
                             </div>
                         </div>
                     </li>
